test_regress/t/t_class_param.out
%Error-UNSUPPORTED: t/t_class_param.v:9:23: Unsupported: class parameters
                                          : ... In instance t
    9 | class Cls #(parameter P = 12);
      |                       ^
%Error-UNSUPPORTED: t/t_class_param.v:20:11: Unsupported: parameterized classes
                                           : ... In instance t
   20 |    Cls #(.P(4)) c4;
      |           ^
%Error: Exiting due to
